<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/camera"
        android:textColor="@color/cl_333333"
        android:textSize="@dimen/font_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/cl_e5e5e5" />

    <TextView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/album"
        android:textColor="@color/cl_333333"
        android:textSize="@dimen/font_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/cl_f4f5fa" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/cl_333333"
        android:textSize="@dimen/font_size_16" />
</LinearLayout>
