<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:orientation="vertical"
    android:background="@color/cl_f4f5fa"
    >

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="@dimen/font_size_16"
        android:textColor="@color/cl_333333"
        android:text="@string/camera"
        android:background="@color/white"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/colorLine"
        />

    <TextView
        android:id="@+id/tv_album"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="@dimen/font_size_16"
        android:textColor="@color/cl_333333"
        android:text="@string/album"
        android:background="@color/white"
        />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="@dimen/font_size_16"
        android:textColor="@color/cl_333333"
        android:text="@string/cancel"
        android:background="@color/white"
        />

</LinearLayout>