<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    android:layout_gravity="center"
    android:background="@drawable/public_corners_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:text="@string/notice"
        android:textSize="@dimen/font_size_16"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:text="@string/without_wifi_tips"
        android:textSize="@dimen/font_size_12"
        android:textColor="@color/black"
        />

    <View
        android:background="@color/colorLine"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <Button
            android:id="@+id/btn_quit"
            android:gravity="center"
            android:text="@string/quit_play"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@null"
            />
        <View
            android:background="@color/colorLine"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_continue"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/continue_play"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_14"
            android:background="@null"
             />
    </LinearLayout>
</LinearLayout>
